# routes/timeslot.js
@@ -4,8 +4,9 @@ const router = express.Router();
 const auth = require('../middleware/auth')
 const slotController=require('../controller/timeslot');
 
-router.route('/create').post(auth,slotController.create)
-router.route('/findSlots').post(auth,slotController.slotsByUserIdandDate)
-router.route('/blockSlot').post(slotController.blockSlot)
+router.route('/create').post(slotController.create)
+router.route('/findSlots').post(slotController.slotsByUserIdandDate)
+router.route('/blockSlot').post(slotController.blockSlot),
+router.route('/slotsByUser').post(slotController.slotsByBooked)
 
 module.exports = router
